tests/fail/IAnd.java
package fail;

import java.lang.System;

public class IAnd {
	public static void main(String[] args) {
		System.out.println(true & 42);
	}
}
